# stm32g431-toolchain

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yaml
cmake/: arm-none-eabi-gcc.cmake
dev/: README.md
dev/vscode/: c_cpp_properties.json
docs/: README.md
src/: main.c  startup_stm32g431xx.s
tools/: stlink.cfg  stm32g431xx.svd
